--- a/css/bootstrap-extend.css
+++ b/css/bootstrap-extend.css
@@ -26,4 +26,46 @@
   font-weight: 600;
   cursor: pointer; }
 
+.chkbox, .rdbtn {
+  opacity: 0;
+  position: absolute; }
+
+.chkbox, .chkbox-label, .rdbtn, .rdbtn-label {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 5px;
+  cursor: pointer; }
+
+.chkbox-label, .rdbtn-label {
+  position: relative; }
+
+.chkbox + .chkbox-label:before, .rdbtn + .rdbtn-label:before {
+  content: '';
+  background: #fff;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  display: inline-block;
+  vertical-align: middle;
+  width: 30px;
+  height: 30px;
+  padding: 2px;
+  margin-right: 10px;
+  text-align: center; }
+
+.chkbox:checked + .chkbox-label:before {
+  content: "\e013";
+  font-family: 'Glyphicons Halflings';
+  background: #ebebeb;
+  color: #555; }
+
+.chkbox-label:hover::before, .rdbtn-label:hover::before {
+  border: 2px solid #adadad; }
+
+.rdbtn + .rdbtn-label:before {
+  border-radius: 50%; }
+
+.rdbtn:checked + .rdbtn-label:before {
+  background: #4CAF50;
+  box-shadow: inset 0px 0px 0px 4px #fff; }
+
 /*# sourceMappingURL=bootstrap-extend.css.map */
