--- a/scss/bootstrap-extend.scss
+++ b/scss/bootstrap-extend.scss
@@ -36,3 +36,58 @@ $activatedBorderColor: #adadad;
   font-weight: 600;
   cursor: pointer;
 }
+//=====================================================================
+//  Checkbox Styles
+// TODO: Add stuff like default, info etc. like .btn
+// TODO: Make selectors checkbox.chckbox so that they cannot be applied
+// on other stuff
+// TODO: Work on the radio class
+//=====================================================================
+.chkbox, .rdbtn {
+  opacity: 0;
+  position: absolute;
+}
+
+.chkbox, .chkbox-label, .rdbtn, .rdbtn-label {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 5px;
+  cursor: pointer;
+}
+
+.chkbox-label, .rdbtn-label {
+  position: relative;
+}
+
+.chkbox + .chkbox-label:before, .rdbtn + .rdbtn-label:before {
+  content: '';
+  background: #fff;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  display: inline-block;
+  vertical-align: middle;
+  width: 30px;
+  height: 30px;
+  padding: 2px;
+  margin-right: 10px;
+  text-align: center;
+}
+
+.chkbox:checked + .chkbox-label:before {
+  content: "\e013";
+  font-family: 'Glyphicons Halflings';
+  background: #ebebeb;
+  color: #555;
+}
+
+.chkbox-label:hover::before, .rdbtn-label:hover::before {
+  border: 2px solid #adadad;
+}
+
+.rdbtn + .rdbtn-label:before {
+  border-radius: 50%;
+}
+.rdbtn:checked + .rdbtn-label:before {
+  background: #4CAF50;
+  box-shadow: inset 0px 0px 0px 4px #fff;
+}
