--- a/css/bootstrap-extend.css
+++ b/css/bootstrap-extend.css
@@ -203,16 +203,47 @@ input[type="checkbox"].chkbox {
 
 .rdbtn {
   opacity: 0;
-  position: absolute; }
-
-.rdbtn, .rdbtn-label {
+  position: absolute;
   display: inline-block;
   vertical-align: middle;
   margin: 5px;
   cursor: pointer; }
+  .rdbtn + label {
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+    margin: 5px;
+    cursor: pointer; }
+    .rdbtn + label:before {
+      content: '';
+      background: #fff;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      display: inline-block;
+      vertical-align: middle;
+      width: 28px;
+      height: 28px;
+      padding: 2px;
+      margin-right: 10px;
+      text-align: center;
+      border-radius: 50%; }
+    .rdbtn + label:hover::before {
+      border: 1px solid #adadad; }
+  .rdbtn:checked + label:before {
+    background: #4CAF50;
+    box-shadow: inset 0px 0px 0px 4px #fff; }
+
+/*
+.rdbtn, .rdbtn-label {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 5px;
+  cursor: pointer;
+}
 
 .rdbtn-label {
-  position: relative; }
+  position: relative;
+}
 
 .rdbtn + .rdbtn-label:before {
   content: '';
@@ -225,16 +256,19 @@ input[type="checkbox"].chkbox {
   height: 30px;
   padding: 2px;
   margin-right: 10px;
-  text-align: center; }
+  text-align: center;
+}
 
 .rdbtn-label:hover::before {
-  border: 2px solid #adadad; }
+  border: 2px solid #adadad;
+}
 
 .rdbtn + .rdbtn-label:before {
-  border-radius: 50%; }
-
+  border-radius: 50%;
+}
 .rdbtn:checked + .rdbtn-label:before {
   background: #4CAF50;
-  box-shadow: inset 0px 0px 0px 4px #fff; }
+  box-shadow: inset 0px 0px 0px 4px #fff;
+}*/
 
 /*# sourceMappingURL=bootstrap-extend.css.map */
