--- a/scss/bootstrap-extend.scss
+++ b/scss/bootstrap-extend.scss
@@ -248,8 +248,44 @@ input[type="checkbox"].chkbox{
 .rdbtn {
   opacity: 0;
   position: absolute;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 5px;
+  cursor: pointer;
+  &+label{
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+    margin: 5px;
+    cursor: pointer;
+    &:before{
+      content: '';
+      background: #fff;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      display: inline-block;
+      vertical-align: middle;
+      width: 28px;
+      height: 28px;
+      padding: 2px;
+      margin-right: 10px;
+      text-align: center;
+      border-radius: 50%;
+    }
+    &:hover::before{
+      border: 1px solid #adadad;
+    }
+  }
+  &:checked{
+    &+label{
+      &:before{
+        background: #4CAF50;
+        box-shadow: inset 0px 0px 0px 4px #fff;
+      }
+    }
+  }
 }
-
+/*
 .rdbtn, .rdbtn-label {
   display: inline-block;
   vertical-align: middle;
@@ -285,4 +321,4 @@ input[type="checkbox"].chkbox{
 .rdbtn:checked + .rdbtn-label:before {
   background: #4CAF50;
   box-shadow: inset 0px 0px 0px 4px #fff;
-}
+}*/
