Radio button styles finalized

--- a/css/bootstrap-extend.css
+++ b/css/bootstrap-extend.css
@@ -364,16 +364,16 @@ input[type="radio"].rdbtn:checked + label:before {
   border: 1px solid #bfbfbf;
   color: #fff !important;
   background: #fff !important;
-  box-shadow: inset 0px 0px 0px 3px #555;
+  box-shadow: inset 0px 0px 0px 3px #eee;
 }
 /* line 137, ../scss/bootstrap-extend.scss */
 .rdbtn-default:checked + label:before {
-  color: #555;
+  color: #eee;
   background: #fff !important;
 }
 /* line 141, ../scss/bootstrap-extend.scss */
 .rdbtn-default:checked + label:hover::before, .rdbtn-default:checked + label:focus::before, .rdbtn-default:checked + label.focus:before {
-  color: #3b3b3b !important;
+  color: #d4d4d4 !important;
   background: #e6e6e6 !important;
 }
 /* line 150, ../scss/bootstrap-extend.scss */
@@ -383,7 +383,16 @@ input[type="radio"].rdbtn:checked + label:before {
 }
 /* line 325, ../scss/bootstrap-extend.scss */
 .rdbtn-default + label:hover::before, .rdbtn-default + label:focus::before, .rdbtn-default + label.focus::before {
-  color: #555 !important;
+  background: #aeaeae !important;
+  box-shadow: inset 0px 0px 0px 3px #fff !important;
+}
+/* line 332, ../scss/bootstrap-extend.scss */
+.rdbtn-default:checked + label:before {
+  background: #8c8c8c !important;
+}
+/* line 335, ../scss/bootstrap-extend.scss */
+.rdbtn-default:checked + label:hover::before, .rdbtn-default:checked + label:focus::before, .rdbtn-default:checked + label.focus:before {
+  background: #6e6e6e !important;
 }
 
 /* line 125, ../scss/bootstrap-extend.scss */
