--- a/css/bootstrap-extend.css
+++ b/css/bootstrap-extend.css
@@ -556,3 +556,96 @@ input[type="radio"].rdbtn:checked + label:before {
   cursor: not-allowed;
   opacity: .65;
 }
+
+/* line 362, ../scss/bootstrap-extend.scss */
+input[type="radio"].switch, input[type="checkbox"].switch {
+  position: absolute;
+  margin-left: -9999px;
+  visibility: hidden;
+}
+/* line 366, ../scss/bootstrap-extend.scss */
+input[type="radio"].switch + label, input[type="checkbox"].switch + label {
+  display: block;
+  position: relative;
+  cursor: pointer;
+  outline: none;
+  user-select: none;
+}
+
+/* line 375, ../scss/bootstrap-extend.scss */
+.switch-round + label {
+  padding: 2px;
+  width: 56px;
+  height: 28px;
+  background-color: #ccc;
+  border-radius: 26px;
+  transition: background 0.4s;
+}
+/* line 382, ../scss/bootstrap-extend.scss */
+.switch-round + label:before, .switch-round + label:after {
+  display: block;
+  position: absolute;
+  content: "";
+}
+/* line 387, ../scss/bootstrap-extend.scss */
+.switch-round + label:before {
+  top: 1px;
+  left: 1px;
+  bottom: 1px;
+  right: 1px;
+  background-color: #fff;
+  border-radius: 26px;
+  transition: background 0.4s;
+  content: "\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0O";
+  color: #ccc;
+  font-size: 17px;
+}
+/* line 399, ../scss/bootstrap-extend.scss */
+.switch-round + label:after {
+  top: 4px;
+  left: 4px;
+  bottom: 4px;
+  width: 22px;
+  background-color: #ccc;
+  border-radius: 26px;
+  transition: margin 0.4s, background 0.4s;
+}
+/* line 408, ../scss/bootstrap-extend.scss */
+.switch-round + label:hover {
+  background-color: #8c8c8c;
+}
+/* line 410, ../scss/bootstrap-extend.scss */
+.switch-round + label:hover:after {
+  background-color: #8c8c8c;
+}
+/* line 413, ../scss/bootstrap-extend.scss */
+.switch-round + label:hover:before {
+  color: #8c8c8c;
+}
+/* line 419, ../scss/bootstrap-extend.scss */
+.switch-round:checked + label {
+  background-color: #4cae4c;
+}
+/* line 421, ../scss/bootstrap-extend.scss */
+.switch-round:checked + label:before {
+  content: "\00a0\00a0I";
+  color: #5cb85c;
+  font-size: 17px;
+}
+/* line 426, ../scss/bootstrap-extend.scss */
+.switch-round:checked + label:after {
+  margin-left: 26px;
+  background-color: #5cb85c;
+}
+/* line 430, ../scss/bootstrap-extend.scss */
+.switch-round:checked + label:hover {
+  background-color: #255525;
+}
+/* line 432, ../scss/bootstrap-extend.scss */
+.switch-round:checked + label:hover:after {
+  background-color: #2d672d;
+}
+/* line 435, ../scss/bootstrap-extend.scss */
+.switch-round:checked + label:hover:before {
+  color: #2d672d;
+}
